dapr/deploy/exampleapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exampleapp
  labels:
    app: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "exampleapp"
        dapr.io/app-port: "8080"
        dapr.io/config: "pipeline"
        dapr.io/sidecar-listen-addresses: "0.0.0.0"
    spec:
      containers:
      - name: example
        image: takesection/example:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
