dapr/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: exampleapp-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: exampleapp-dapr
                port: 
                  number: 80
            pathType: Prefix
            path: /
